# Audio-Video-FX

./: .gitignore  CMakeLists.txt  avfx.py  cmaker-config.json  main.py
backup/: application.hpp  glcontext.cpp  glcontext.hpp  main.cpp  video.cpp  video.hpp
lib/src/core/: thread.cpp
lib/src/media/: audio.cpp  video.hpp
lib/src/render/: gl_context.hpp
lib/src/ui/widgets/: scrubber.hpp
shaders/: basic.frag  basic.vert
src/: CMakeLists.txt  __init__.py  gl_widget.py  main.cpp  video.cpp  video.hpp
src/core/: application.cpp  application.hpp  decode_stream.cpp  decode_stream.hpp  hello_window.cpp  hello_window.hpp  thread.hpp  video.cpp  video.hpp
src/media/: audio.hpp  frames.cpp  frames.hpp  video.cpp
src/render/: gl_context.cpp  opengl_widget.cpp  opengl_widget.hpp
src/ui/: window.cpp  window.hpp
src/ui/widgets/: scrubber.cpp
ui/: init  main_window.ui  ui_mainwindow.py
